--- a/index.html
+++ b/index.html
@@ -1,67 +1,99 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>FALAHX – Future of Ethical Crypto</title>
-    <link rel="stylesheet" href="style.css" />
-    <link rel="icon" href="favicon.ico" type="image/x-icon">
-    <script defer src="wallet.js"></script>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>FALAHX – Ethical Crypto</title>
+  <link rel="stylesheet" href="style.css" />
+  <link rel="icon" href="favicon.ico" type="image/x-icon" />
+  <script defer src="wallet.js"></script>
 </head>
 <body>
-    <header>
-        <img src="assets/logo/logo.png" alt="FALAHX Logo" class="logo" />
-        <nav>
-            <ul>
-                <li><a href="#about">About</a></li>
-                <li><a href="#tokenomics">Tokenomics</a></li>
-                <li><a href="#roadmap">Roadmap</a></li>
-                <li><a href="#team">Team</a></li>
-                <li><a href="#contact">Contact</a></li>
-            </ul>
-        </nav>
-    </header>
-    <section class="hero">
-        <h1>FALAHX</h1>
-        <p>The Future of Ethical Decentralized Finance</p>
-        <a href="#" class="btn">Buy Now</a><br><br>
-        <button id="walletBtn" class="btn">Connect Wallet</button>
-    </section>
-    <section id="about">
-        <h2>About FALAHX</h2>
-        <p>FALAHX is a PoW-based crypto token focused on success, ethics, and decentralization, powered by the BNB Chain.</p>
-    </section>
-    <section id="tokenomics">
-        <h2>Tokenomics</h2>
-        <ul>
-            <li>Total Supply: 10,000,000</li>
-            <li>Liquidity: 37.5%</li>
-            <li>Marketing: 25%</li>
-            <li>Team: 15%</li>
-            <li>Reserve: 12.5%</li>
-            <li>Burn: 10%</li>
-        </ul>
-    </section>
-    <section id="roadmap">
-        <h2>Roadmap</h2>
-        <ol>
-            <li>Launch & Website</li>
-            <li>Community Growth</li>
-            <li>Security & Audits</li>
-            <li>DAO & NFT Expansion</li>
-        </ol>
-    </section>
-    <section id="team">
-        <h2>Team</h2>
-        <p>CryptoShark – Founder | CodeMaster – Dev | HypeGuru – Marketing</p>
-    </section>
-    <section id="contact">
-        <h2>Contact</h2>
-        <p>Email: contact@falahx.io</p>
-    </section>
-    <footer>
-        <p>&copy; 2025 FALAHX. All rights reserved.</p>
-    </footer>
+  <header>
+    <img src="assets/logo/logo.png" alt="FALAHX Logo" class="logo" />
+    <nav>
+      <ul>
+        <li><a href="#about">About</a></li>
+        <li><a href="#tokenomics">Tokenomics</a></li>
+        <li><a href="#roadmap">Roadmap</a></li>
+        <li><a href="#features">Features</a></li>
+        <li><a href="#team">Team</a></li>
+        <li><a href="#faq">FAQ</a></li>
+        <li><a href="#contact">Contact</a></li>
+      </ul>
+    </nav>
+  </header>
+
+  <section class="hero">
+    <h1>FALAHX</h1>
+    <p>The Future of Ethical Decentralized Finance</p>
+    <a href="#" class="btn">Buy Now</a><br><br>
+    <button id="walletBtn" class="btn">Connect Wallet</button>
+  </section>
+
+  <section id="about">
+    <h2>About</h2>
+    <p>FALAHX is a purpose-driven cryptocurrency designed to empower ethical investors and promote decentralized growth. We aim to fix common problems in DeFi with fair distribution, anti-whale logic, and real community governance.</p>
+  </section>
+
+  <section id="features">
+    <h2>Features</h2>
+    <ul>
+      <li>Proof of Work (PoW) secured</li>
+      <li>Anti-whale + Cooldown protection</li>
+      <li>Auto-burn on every transaction</li>
+      <li>Buy/Sell tax for sustainability</li>
+      <li>Adjustable tax logic (by owner)</li>
+    </ul>
+  </section>
+
+  <section id="tokenomics">
+    <h2>Tokenomics</h2>
+    <ul>
+      <li><strong>Total Supply:</strong> 10,000,000 FALAHX</li>
+      <li><strong>Liquidity:</strong> 37.5% (Locked with PinkLock)</li>
+      <li><strong>Marketing:</strong> 25%</li>
+      <li><strong>Team Allocation:</strong> 15% (time-locked)</li>
+      <li><strong>Reserve/Partnerships:</strong> 12.5%</li>
+      <li><strong>Burn:</strong> 10%</li>
+    </ul>
+  </section>
+
+  <section id="roadmap">
+    <h2>Roadmap</h2>
+    <ol>
+      <li>Website + Token Deployment</li>
+      <li>Community Launch + Airdrops</li>
+      <li>CEX Listings + CoinMarketCap</li>
+      <li>DAO + Governance Voting</li>
+      <li>NFT + Web3 Ecosystem Expansion</li>
+    </ol>
+  </section>
+
+  <section id="team">
+    <h2>Team</h2>
+    <p><strong>CryptoShark</strong> – Founder</p>
+    <p><strong>CodeMaster</strong> – Lead Developer</p>
+    <p><strong>HypeGuru</strong> – Community Manager</p>
+  </section>
+
+  <section id="faq">
+    <h2>FAQ</h2>
+    <p><strong>Q:</strong> What makes FALAHX unique?</p>
+    <p><strong>A:</strong> It combines real anti-dump protection, auto-burn, and fair community-focused tokenomics.</p>
+    <p><strong>Q:</strong> Can taxes be changed?</p>
+    <p><strong>A:</strong> Yes, only by the owner wallet with secure limits.</p>
+  </section>
+
+  <section id="contact">
+    <h2>Contact</h2>
+    <p>Email: contact@falahx.io</p>
+    <p>Telegram: t.me/falahx</p>
+    <p>Twitter: @FalahxToken</p>
+  </section>
+
+  <footer>
+    <p>&copy; 2025 FALAHX. All rights reserved.</p>
+  </footer>
 </body>
 </html>
