--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>FALAHX – Ethical Crypto</title>
   <link rel="stylesheet" href="style.css" />
   <link rel="icon" href="favicon.ico" type="image/x-icon" />
@@ -27,69 +27,60 @@
   <section class="hero">
     <h1>FALAHX</h1>
     <p>The Future of Ethical Decentralized Finance</p>
-    <a href="#" class="btn">Buy Now</a><br><br>
+    <a href="#" class="btn">Buy Now</a><br /><br />
     <button id="walletBtn" class="btn">Connect Wallet</button>
   </section>
 
-  <section id="about">
-    <h2>About</h2>
-    <p>FALAHX is a purpose-driven cryptocurrency designed to empower ethical investors and promote decentralized growth. We aim to fix common problems in DeFi with fair distribution, anti-whale logic, and real community governance.</p>
-  </section>
+  <section id="token-explanation" class="section">
+    <div class="container">
+      <h2>FALAHX Token: Building Trust for Fair and Sustainable Crypto Growth</h2>
+      <p>
+        Welcome to FALAHX, a cryptocurrency made for people who want to invest with confidence. In a world where scams and quick-money schemes are common, FALAHX takes a different path. Built on the BNB Chain as a BEP-20 token, it’s designed to bring fairness, honesty, and lasting value to everyone involved.
+      </p>
 
-  <section id="features">
-    <h2>Features</h2>
-    <ul>
-      <li>Proof of Work (PoW) secured</li>
-      <li>Anti-whale + Cooldown protection</li>
-      <li>Auto-burn on every transaction</li>
-      <li>Buy/Sell tax for sustainability</li>
-      <li>Adjustable tax logic (by owner)</li>
-    </ul>
-  </section>
+      <h3>Why Trust Matters in Crypto — And How FALAHX Earns It</h3>
+      <p>
+        The crypto space can feel confusing and risky, especially for new investors. That’s why FALAHX focuses on trustworthiness from day one, using smart technology and clear rules to protect your investment:
+      </p>
+      <ul>
+        <li><strong>No Private Sales or Presales:</strong> FALAHX launched fairly, so everyone had the same chance to join — no insider advantage.</li>
+        <li><strong>Liquidity Locked with PinkLock:</strong> Protects you from "rug pulls" by ensuring funds remain secure and can't be withdrawn suddenly.</li>
+        <li><strong>Community-Driven, No VC Funding:</strong> Growth comes from the holders and community — not private investors seeking quick profit.</li>
+        <li><strong>Proof of Work (PoW):</strong> Ensures trust and security through a tested consensus model.</li>
+      </ul>
 
-  <section id="tokenomics">
-    <h2>Tokenomics</h2>
-    <ul>
-      <li><strong>Total Supply:</strong> 10,000,000 FALAHX</li>
-      <li><strong>Liquidity:</strong> 37.5% (Locked with PinkLock)</li>
-      <li><strong>Marketing:</strong> 25%</li>
-      <li><strong>Team Allocation:</strong> 15% (time-locked)</li>
-      <li><strong>Reserve/Partnerships:</strong> 12.5%</li>
-      <li><strong>Burn:</strong> 10%</li>
-    </ul>
-  </section>
+      <h3>Smart Features to Protect Investors and Promote Fairness</h3>
+      <ul>
+        <li><strong>Buy and Sell Taxes:</strong> Small fees (0.5% buy / 1% sell) fund development and marketing while encouraging long-term holding.</li>
+        <li><strong>Auto-Burn:</strong> 0.2% of every transaction is burned to reduce supply and increase scarcity.</li>
+        <li><strong>Anti-Whale Protection:</strong> No wallet can hold more than 2% of the total supply.</li>
+        <li><strong>Max Transaction Limit:</strong> Limits each trade to 1% of the total supply.</li>
+        <li><strong>Cooldown Mechanism:</strong> Enforces a 60-second delay between trades per wallet.</li>
+        <li><strong>Bot Protection:</strong> Stops unfair bot trading that manipulates the market.</li>
+        <li><strong>Editable Taxes with Limits:</strong> Ensures flexibility while maintaining fairness and community trust.</li>
+      </ul>
 
-  <section id="roadmap">
-    <h2>Roadmap</h2>
-    <ol>
-      <li>Website + Token Deployment</li>
-      <li>Community Launch + Airdrops</li>
-      <li>CEX Listings + CoinMarketCap</li>
-      <li>DAO + Governance Voting</li>
-      <li>NFT + Web3 Ecosystem Expansion</li>
-    </ol>
-  </section>
+      <h3>Transparent Tokenomics That Inspire Confidence</h3>
+      <p>Out of the 10,000,000 FALAHX tokens:</p>
+      <ul>
+        <li>37.5% Locked in Liquidity Pool</li>
+        <li>25% for Marketing</li>
+        <li>15% Team Allocation (Time-Locked)</li>
+        <li>12.5% Partnerships & Reserves</li>
+        <li>10% Burned to Increase Scarcity</li>
+      </ul>
 
-  <section id="team">
-    <h2>Team</h2>
-    <p><strong>CryptoShark</strong> – Founder</p>
-    <p><strong>CodeMaster</strong> – Lead Developer</p>
-    <p><strong>HypeGuru</strong> – Community Manager</p>
-  </section>
-
-  <section id="faq">
-    <h2>FAQ</h2>
-    <p><strong>Q:</strong> What makes FALAHX unique?</p>
-    <p><strong>A:</strong> It combines real anti-dump protection, auto-burn, and fair community-focused tokenomics.</p>
-    <p><strong>Q:</strong> Can taxes be changed?</p>
-    <p><strong>A:</strong> Yes, only by the owner wallet with secure limits.</p>
-  </section>
-
-  <section id="contact">
-    <h2>Contact</h2>
-    <p>Email: contact@falahx.io</p>
-    <p>Telegram: t.me/falahx</p>
-    <p>Twitter: @FalahxToken</p>
+      <h3>A Token Built to Restore Trust in DeFi</h3>
+      <p>
+        FALAHX understands that many investors have been burned by pump-and-dump scams and dishonest projects. Our mission is to rebuild confidence by offering a transparent, secure, and community-first token. With FALAHX, you’re not just investing in a cryptocurrency; you’re joining a movement toward ethical, sustainable growth in decentralized finance.
+      </p>
+      <p>
+        Join the FALAHX community today — where fairness, security, and long-term value are more than promises. They’re built into every line of code.
+      </p>
+      <p>
+        Ready to take the next step? Learn more about FALAHX and start investing with peace of mind.
+      </p>
+    </div>
   </section>
 
   <footer>
