--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
   <header>
-    <img src="assets/logo/logo.webp" alt="FALAHX Logo" class="logo" />
+    <img src="assets/logo/logo.png" alt="FALAHX Logo" class="logo" />
     <nav>
       <ul>
         <li><a href="#about">About</a></li>
