--- a/index.html
+++ b/index.html
@@ -28,9 +28,11 @@
     </nav>
   </header>
 
+  <!-- ✅ HERO SECTION WITH VIDEO BACKGROUND -->
   <section id="hero" class="hero-section">
     <video autoplay muted loop class="hero-bg">
       <source src="assets/media/hero-bg.mp4" type="video/mp4">
+      Your browser does not support the video tag.
     </video>
     <div class="hero-content">
       <h1 class="glow">FALAHX</h1>
@@ -41,12 +43,14 @@
     </div>
   </section>
 
+  <!-- ✅ LIVE PRICE CHART -->
   <section id="live" class="section fade-in">
     <h2>Live Price Chart</h2>
     <iframe src="https://dexscreener.com/bsc/0x0000000000000000000000000000000000000000?embed=1&theme=dark"
       style="width:100%; height:500px; border:none; border-radius:12px;"></iframe>
   </section>
 
+  <!-- ✅ TOKENOMICS SECTION -->
   <section id="tokenomics" class="section fade-in">
     <h2>Tokenomics</h2>
     <canvas id="tokenChart" width="300" height="300"></canvas>
@@ -60,6 +64,7 @@
     <a href="token-info.json" class="btn secondary">Download Token Info</a>
   </section>
 
+  <!-- ✅ CONTACT SECTION -->
   <section id="contact" class="section fade-in">
     <h2>Contact & Socials</h2>
     <p>Email: contact@falahx.io</p>
@@ -72,6 +77,7 @@
     <p>&copy; 2025 FALAHX. All rights reserved.</p>
   </footer>
 
+  <!-- ✅ JS: Chart + Wallet Connect -->
   <script>
     const chart = new Chart(document.getElementById("tokenChart"), {
       type: "pie",
