--- a/index.html
+++ b/index.html
@@ -25,6 +25,10 @@
       text-decoration: none;
       font-weight: 600;
     }
+    header img {
+      height: 60px;
+      margin-bottom: 10px;
+    }
     section {
       padding: 40px 20px;
       max-width: 1000px;
@@ -58,6 +62,16 @@
     .tokenomics li {
       margin: 10px 0;
     }
+    .hero-video {
+      margin-top: 20px;
+      text-align: center;
+    }
+    .hero-video video {
+      width: 100%;
+      max-height: 400px;
+      border-radius: 12px;
+      margin-top: 20px;
+    }
     footer p, footer a {
       color: #aaa;
       font-size: 0.9rem;
@@ -66,7 +80,7 @@
 </head>
 <body>
   <header>
-    <h1>FALAHX Logo</h1>
+    <img src="falahx-logo.png" alt="FALAHX Logo">
     <nav>
       <a href="#home">Home</a>
       <a href="#about">About</a>
@@ -87,6 +101,12 @@
       <a href="#">Connect Wallet</a>
       <a href="#">View Whitepaper</a>
       <a href="#">Live Price Chart</a>
+    </div>
+    <div class="hero-video">
+      <video autoplay muted loop playsinline>
+        <source src="falahx-animation.mp4" type="video/mp4">
+        Your browser does not support the video tag.
+      </video>
     </div>
   </section>
 
