--- a/index.html
+++ b/index.html
@@ -26,7 +26,9 @@
       font-weight: 600;
     }
     header img {
-      height: 60px;
+      height: 120px;
+      max-width: 100%;
+      object-fit: contain;
       margin-bottom: 10px;
     }
     section {
