--- a/index.html
+++ b/index.html
@@ -1,88 +1,200 @@
 <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>FALAHX – Ethical DeFi Token</title>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
+  <link rel="icon" type="image/png" href="falahx-logo.png">
   <style>
-    body {
-      font-family: 'Poppins', sans-serif;
+    * {
       margin: 0;
       padding: 0;
-      background-color: #0d0d0d;
-      color: #f0f0f0;
-      line-height: 1.6;
+      box-sizing: border-box;
     }
-    header, footer {
+
+    html {
+      scroll-behavior: smooth;
+    }
+
+    body {
+      font-family: 'Poppins', sans-serif;
+      background: linear-gradient(135deg, #0f0f0f, #1a1a1a);
+      color: #f0f0f0;
+    }
+
+    header {
       background-color: #111;
       padding: 20px;
       text-align: center;
+      position: sticky;
+      top: 0;
+      z-index: 100;
+      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
     }
-    nav a {
-      color: #00bcd4;
-      margin: 0 10px;
-      text-decoration: none;
-      font-weight: 600;
-    }
+
     header img {
       height: 120px;
-      max-width: 100%;
-      object-fit: contain;
-      margin-bottom: 10px;
     }
-    section {
-      padding: 40px 20px;
-      max-width: 1000px;
-      margin: auto;
+
+    nav {
+      margin-top: 10px;
     }
-    h1, h2, h3 {
-      color: #00bcd4;
+
+    nav a {
+      color: #00e5ff;
+      margin: 0 15px;
+      text-decoration: none;
+      font-weight: 600;
+      position: relative;
     }
+
+    nav a::after {
+      content: "";
+      position: absolute;
+      bottom: -5px;
+      left: 0;
+      width: 0;
+      height: 2px;
+      background: #00e5ff;
+      transition: width 0.3s ease;
+    }
+
+    nav a:hover::after {
+      width: 100%;
+    }
+
     .hero {
-      background: linear-gradient(135deg, #000000, #001f3f);
-      padding: 80px 20px;
+      position: relative;
+      width: 100%;
+      height: 100vh;
+      overflow: hidden;
+      display: flex;
+      align-items: center;
+      justify-content: center;
       text-align: center;
     }
-    .hero h1 {
-      font-size: 3rem;
-      margin-bottom: 20px;
+
+    .hero video {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+      z-index: 0;
+      filter: brightness(0.4);
     }
-    .buttons a {
+
+    .hero .content {
+      position: relative;
+      z-index: 2;
+      color: #fff;
+      padding: 20px;
+    }
+
+    .hero h1 {
+      font-size: 4rem;
+      color: #00e5ff;
+      text-shadow: 2px 2px 10px #000;
+    }
+
+    .hero p {
+      font-size: 1.5rem;
+      margin: 20px 0;
+      color: #ddd;
+    }
+
+    .hero .buttons a,
+    .hero .buttons button {
       display: inline-block;
       margin: 10px;
-      padding: 12px 25px;
-      background-color: #00bcd4;
+      padding: 14px 30px;
+      background: linear-gradient(135deg, #00e5ff, #0088ff);
       color: #fff;
-      border-radius: 8px;
+      border-radius: 10px;
+      border: none;
+      font-weight: bold;
+      cursor: pointer;
       text-decoration: none;
+      transition: transform 0.3s, box-shadow 0.3s;
     }
-    .tokenomics ul {
-      list-style: none;
-      padding: 0;
+
+    .hero .buttons a:hover,
+    .hero .buttons button:hover {
+      transform: translateY(-3px);
+      box-shadow: 0 8px 20px rgba(0, 229, 255, 0.5);
     }
-    .tokenomics li {
+
+    section {
+      padding: 60px 20px;
+      max-width: 1000px;
+      margin: auto;
+      animation: fadeIn 1s ease forwards;
+    }
+
+    h2 {
+      color: #00e5ff;
+      margin-bottom: 20px;
+      font-size: 2rem;
+      border-bottom: 2px solid #00e5ff;
+      display: inline-block;
+      padding-bottom: 5px;
+    }
+
+    ul {
+      padding-left: 20px;
+    }
+
+    li {
       margin: 10px 0;
+      line-height: 1.5;
     }
-    .hero-video {
-      margin-top: 20px;
+
+    footer {
+      background-color: #111;
       text-align: center;
-    }
-    .hero-video video {
-      width: 100%;
-      max-height: 400px;
-      border-radius: 12px;
-      margin-top: 20px;
-    }
-    footer p, footer a {
-      color: #aaa;
+      padding: 40px 20px;
       font-size: 0.9rem;
+      color: #aaa;
+      border-top: 1px solid #222;
+    }
+
+    a {
+      color: #00e5ff;
+    }
+
+    @keyframes fadeIn {
+      from { opacity: 0; transform: translateY(30px); }
+      to { opacity: 1; transform: translateY(0); }
+    }
+
+    @media (max-width: 768px) {
+      .hero h1 { font-size: 2.5rem; }
+      .hero p { font-size: 1.1rem; }
+      header img { height: 80px; }
+      nav a { display: block; margin: 8px 0; }
     }
   </style>
+  <script>
+    async function connectWallet() {
+      if (window.ethereum) {
+        try {
+          const accounts = await ethereum.request({ method: 'eth_requestAccounts' });
+          alert('Wallet connected: ' + accounts[0]);
+        } catch (error) {
+          alert('Connection denied.');
+        }
+      } else {
+        alert('MetaMask not detected. Please install MetaMask.');
+      }
+    }
+  </script>
 </head>
 <body>
   <header>
-    <img src="falahx-logo.png" alt="FALAHX Logo">
+    <img src="falahx-logo.png" alt="FALAHX Logo" />
     <nav>
       <a href="#home">Home</a>
       <a href="#about">About</a>
@@ -96,28 +208,27 @@
   </header>
 
   <section class="hero" id="home">
-    <h1>FALAHX</h1>
-    <p>The Future of Ethical, Community-Powered DeFi</p>
-    <div class="buttons">
-      <a href="#">Buy Now</a>
-      <a href="#">Connect Wallet</a>
-      <a href="#">View Whitepaper</a>
-      <a href="#">Live Price Chart</a>
-    </div>
-    <div class="hero-video">
-      <video autoplay muted loop playsinline>
-        <source src="falahx-animation.mp4" type="video/mp4">
-        Your browser does not support the video tag.
-      </video>
+    <video autoplay muted loop playsinline>
+      <source src="hero-bg.mp4.mp4" type="video/mp4" />
+    </video>
+    <div class="content">
+      <h1>FALAHX</h1>
+      <p>The Future of Ethical, Community-Powered DeFi</p>
+      <div class="buttons">
+        <a href="#">Buy Now</a>
+        <button onclick="connectWallet()">Connect Wallet</button>
+        <a href="#">View Whitepaper</a>
+        <a href="https://www.dextools.io/app/en/bnb/pair-explorer">Live Price Chart</a>
+      </div>
     </div>
   </section>
 
   <section id="about">
     <h2>About FALAHX</h2>
-    <p>FALAHX is a purpose-driven DeFi token built on the principles of fairness, transparency, and ethics. We're building a financial future where communities have power and protection against manipulation, bot attacks, and whale dominance. With advanced smart contract mechanics and a strong focus on long-term sustainability, FALAHX is a revolution in ethical crypto investing.</p>
+    <p>FALAHX is a purpose-driven DeFi token built on fairness, transparency, and ethics. We empower communities through protection against manipulation, bot attacks, and whale dominance. FALAHX is a revolution in sustainable crypto investing.</p>
   </section>
 
-  <section id="tokenomics" class="tokenomics">
+  <section id="tokenomics">
     <h2>Tokenomics</h2>
     <ul>
       <li>🔒 <strong>37.5% Liquidity (Locked):</strong> Ensures trading stability and trust.</li>
@@ -126,46 +237,45 @@
       <li>🌱 <strong>12.5% Reserves:</strong> For future development and rewards.</li>
       <li>🔥 <strong>10% Burned:</strong> Permanently removed to increase scarcity and value.</li>
     </ul>
-    <p><a href="#">Download Token Info</a></p>
   </section>
 
   <section id="roadmap">
     <h2>Roadmap</h2>
-    <p><strong>Phase 1 – Foundation:</strong> Token launch, website, audit, and community setup.<br />
-       <strong>Phase 2 – Launch & Liquidity:</strong> Trading live, locked LP, marketing roll-out.<br />
-       <strong>Phase 3 – Growth & Utility:</strong> Platform partnerships, staking, audit.<br />
-       <strong>Phase 4 – Expansion:</strong> CEX listings, mobile app, charity collabs.</p>
+    <p><strong>Phase 1 – Foundation:</strong> Token launch, website, audit, and community setup.<br>
+    <strong>Phase 2 – Launch & Liquidity:</strong> Trading live, locked LP, marketing roll-out.<br>
+    <strong>Phase 3 – Growth & Utility:</strong> Platform partnerships, staking, second audit.<br>
+    <strong>Phase 4 – Expansion:</strong> CEX listings, mobile app, charity collabs, ecosystem utility.</p>
   </section>
 
   <section id="team">
     <h2>Team</h2>
-    <p>Our team is made up of experienced developers, DeFi strategists, and community leaders. After security verification and audits, our core team will go public. We value transparency and ethical leadership above all.</p>
+    <p>Our team includes verified developers, ethical DeFi leaders, and trusted community advisors. We value transparency, undergo security checks, and will go public post-audit.</p>
   </section>
 
   <section id="blog">
     <h2>Blog</h2>
-    <p>Stay informed with news, updates, and insights from the FALAHX team. First post coming soon: <strong>"Why FALAHX is More Than a Meme"</strong>.</p>
+    <p>Stay updated with our latest insights and news. First post: <strong>"Why FALAHX is More Than a Meme"</strong>.</p>
   </section>
 
   <section id="faq">
     <h2>FAQ</h2>
-    <p><strong>What is FALAHX?</strong><br />A BEP-20 token with anti-dump, cooldown, and burn mechanisms.<br /><br />
-       <strong>Is liquidity locked?</strong><br />Yes, using a trusted locker like PinkLock.<br /><br />
-       <strong>What are the taxes?</strong><br />Buy: 0.5%, Sell: 1%, Auto-Burn: 0.2% (adjustable).<br /><br />
-       <strong>Where can I buy?</strong><br />On PancakeSwap after launch.<br /><br />
-       <strong>How are whales and bots handled?</strong><br />Smart contract includes wallet/tx limits, cooldown, and bot protection.</p>
+    <p><strong>What is FALAHX?</strong><br>BEP-20 token with anti-dump, cooldown, and burn mechanics.<br><br>
+    <strong>Is liquidity locked?</strong><br>Yes, via PinkLock smart locker.<br><br>
+    <strong>What are the taxes?</strong><br>Buy: 0.5%, Sell: 1%, Auto-Burn: 0.2% (all adjustable).<br><br>
+    <strong>Where to buy?</strong><br>PancakeSwap after launch.<br><br>
+    <strong>How are bots and whales handled?</strong><br>Smart contract limits wallet/tx sizes and enforces cooldowns.</p>
   </section>
 
   <section id="contact">
     <h2>Contact & Socials</h2>
-    <p>Email: <a href="mailto:contact@falahx.io">contact@falahx.io</a><br />
-       Telegram: <a href="https://t.me/falahx">@falahx</a><br />
-       Twitter: <a href="https://twitter.com/falahx">@falahx</a><br />
-       GitHub: <a href="https://github.com/falahx">falahx</a></p>
+    <p>Email: <a href="mailto:contact@falahx.io">contact@falahx.io</a><br>
+    Telegram: <a href="https://t.me/falahx">@falahx</a><br>
+    Twitter: <a href="https://twitter.com/falahx">@falahx</a><br>
+    GitHub: <a href="https://github.com/falahx">falahx</a></p>
   </section>
 
   <footer>
-    <p>&copy; 2025 FALAHX. All rights reserved.</p>
+    <p>&copy; 2025 FALAHX. Built with trust and purpose. All rights reserved.</p>
   </footer>
 </body>
 </html>
