--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
 </head>
 <body>
   <header>
-    <img src="falahx-logo.png" alt="FALAHX Logo" />
+    <img src="assets/logo/logo.png-logo.png" alt="FALAHX Logo" />
     <nav>
       <a href="#home">Home</a>
       <a href="#about">About</a>
