--- a/index.html
+++ b/index.html
@@ -158,8 +158,8 @@
   </header>
 
   <section class="hero">
-    <video autoplay muted loop>
-      <source src="hero-bg.mp4.mp4" type="video/mp4">
+    <video autoplay muted loop playsinline>
+      <source src="assets/media/hero-bg.mp4" type="video/mp4">
     </video>
     <div class="content">
       <h1>FALAHX</h1>
