--- a/index.html
+++ b/index.html
@@ -160,6 +160,7 @@
   <section class="hero">
     <video autoplay muted loop playsinline>
       <source src="assets/media/hero-bg.mp4" type="video/mp4">
+      Your browser does not support the video tag.
     </video>
     <div class="content">
       <h1>FALAHX</h1>
