--- a/index.html
+++ b/index.html
@@ -3,145 +3,88 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>FALAHX – Ethical DeFi Token</title>
-  <link rel="icon" href="assets/logo/logo.png" type="image/png" />
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
+  <title>FALAHX</title>
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/5.1.3/css/bootstrap.min.css" />
   <style>
-    :root {
-      --primary: #00e5ff;
-      --dark: #0f0f0f;
-      --white: #ffffff;
-    }
-
-    * {
+    body, html {
       margin: 0;
       padding: 0;
-      box-sizing: border-box;
-    }
-
-    body {
-      font-family: 'Poppins', sans-serif;
-      background-color: var(--dark);
-      color: var(--white);
-      overflow-x: hidden;
-    }
-
-    header {
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      padding: 10px 30px;
-      background-color: #111;
-      box-shadow: 0 2px 6px rgba(0,0,0,0.5);
-      position: sticky;
-      top: 0;
-      z-index: 1000;
-    }
-
-    header img {
-      height: 60px;
-    }
-
-    nav a {
-      color: var(--primary);
-      margin-left: 20px;
-      text-decoration: none;
-      font-weight: 600;
-    }
-
-    .hero {
-      position: relative;
-      height: 100vh;
-      overflow: hidden;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      text-align: center;
-    }
-
-    .hero video {
-      position: absolute;
-      width: 100%;
       height: 100%;
-      object-fit: cover;
-      z-index: 0;
-      filter: brightness(0.3);
-    }
-
-    .hero .content {
-      position: relative;
-      z-index: 2;
-      padding: 20px;
+      font-family: 'Segoe UI', sans-serif;
       color: white;
     }
 
-    .hero h1 {
-      font-size: 3rem;
-      color: var(--primary);
-      margin-bottom: 15px;
+    section.hero {
+      position: relative;
+      height: 100vh;
+      width: 100%;
+      overflow: hidden;
     }
 
-    .hero p {
-      font-size: 1.2rem;
-      margin-bottom: 30px;
+    section.hero video {
+      position: absolute;
+      top: 0;
+      left: 0;
+      object-fit: cover;
+      width: 100%;
+      height: 100%;
+      z-index: -1;
     }
 
-    .btn {
-      padding: 12px 25px;
-      border: none;
-      border-radius: 25px;
-      background: var(--primary);
-      color: black;
-      font-weight: 600;
+    .overlay {
+      position: absolute;
+      top: 0;
+      left: 0;
+      background-color: #000000;
+      opacity: 0.5;
+      width: 100%;
+      height: 100%;
+      z-index: 0;
+    }
+
+    .hero-content {
+      position: relative;
+      z-index: 1;
+      text-align: center;
+      padding: 2rem;
+      top: 50%;
+      transform: translateY(-50%);
+    }
+
+    .btn-white-outline {
+      color: white;
+      border: 2px solid white;
+      padding: 0.75rem 1.5rem;
       text-decoration: none;
-      margin: 5px;
-      transition: 0.3s;
-      display: inline-block;
+      transition: all 0.3s ease;
     }
 
-    .btn:hover {
+    .btn-white-outline:hover {
       background: white;
       color: black;
-    }
-
-    @media (max-width: 768px) {
-      .hero h1 {
-        font-size: 2rem;
-      }
-      .hero p {
-        font-size: 1rem;
-      }
-      .btn {
-        padding: 10px 20px;
-        font-size: 0.9rem;
-      }
     }
   </style>
 </head>
 <body>
-  <header>
-    <img src="assets/logo/logo.png" alt="FALAHX Logo">
-    <nav>
-      <a href="#about">About</a>
-      <a href="#tokenomics">Tokenomics</a>
-      <a href="#roadmap">Roadmap</a>
-      <a href="#faq">FAQ</a>
-    </nav>
-  </header>
 
   <section class="hero">
+    <!-- Background Video -->
     <video autoplay muted loop playsinline>
-      <source src="assets/media/test-video.mp4" type="video/mp4" />
+      <source src="assets/media/hero-bg.mp4" type="video/mp4">
       Your browser does not support the video tag.
     </video>
-    <div class="content">
-      <h1>FALAHX</h1>
-      <p>The Future of Ethical, Community-Powered DeFi</p>
-      <a href="#" class="btn">Buy Now</a>
-      <a href="#" class="btn">Connect Wallet</a>
-      <a href="#" class="btn">Whitepaper</a>
-      <a href="#" class="btn">Live Chart</a>
+
+    <!-- Overlay -->
+    <div class="overlay"></div>
+
+    <!-- Content -->
+    <div class="hero-content container">
+      <h1 class="display-1 fw-bold">FALAHX</h1>
+      <h2 class="display-5 mb-3">Header Subtitle</h2>
+      <p class="lead mb-4">Secure your future today</p>
+      <a href="https://mobiri.se" class="btn-white-outline">Join Us</a>
     </div>
   </section>
+
 </body>
 </html>
